2009-04-16  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: fixed "Bug
	  495263 - when trying to edit an 'unrecognized' xml file, an
	  exception occurs (and sometimes crashes MD) when I try to
	  edit.".

2009-04-16  Mike Krüger  <mkrueger@novell.com>

	* ChangeLog:
	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/SelectionActions.cs: Added vi mode patch
	  from levi bard.

2009-04-15  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Don't interpret keystrokes as
	  text input when alt, meta or super modifiers are active.

2009-04-15  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/SelectionActions.cs:
	* Mono.TextEditor/TextEditorData.cs: Fix line-visual vi mode.

2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/ClipboardActions.cs: Fixed some issues in
	  vim mode.

2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/Rule.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed text
	  editor issues.

2009-04-15  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Selection.cs:
	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/LineSegment.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/ClipboardActions.cs:
	* Mono.TextEditor/TextLinkEditMode.cs:
	* Mono.TextEditor/SelectionActions.cs:
	* Mono.TextEditor/DefaultEditActions.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Worked on the
	  text editor. Added block selection mode & fixed some bugs.

	* Makefile.am:
	* gtk-gui/objects.xml:
	* Mono.TextEditor.csproj: 

2009-04-14  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: removed debug
	  message.

2009-04-14  Mike Krüger  <mkrueger@novell.com>
